nvml-wrapper-sys/nvml.h

    typedef struct nvmlDevice_st *nvmlDevice_t;
    /** 
 * Description of HWBC entry 
 */
    typedef struct nvmlHwbcEntry_st
    {
        unsigned int hwbcId;
        char firmwareVersion[32];
    } nvmlHwbcEntry_t;
    /** 
 * Fan state enum. 
 */
    typedef enum nvmlFanState_enum
    {
        NVML_FAN_NORMAL = 0, //!< Fan is working properly
        NVML_FAN_FAILED = 1  //!< Fan has failed
    } nvmlFanState_t;
    /** 
 * Led color enum. 
 */
    typedef enum nvmlLedColor_enum
    {
        NVML_LED_COLOR_GREEN = 0, //!< GREEN, indicates good health
        NVML_LED_COLOR_AMBER = 1  //!< AMBER, indicates problem
    } nvmlLedColor_t;
    /** 
 * LED states for an S-class unit.
 */
    typedef struct nvmlLedState_st
    {
        char cause[256];      //!< If amber, a text description of the cause
        nvmlLedColor_t color; //!< GREEN or AMBER
    } nvmlLedState_t;
    /** 
 * Static S-class unit info.
 */
    typedef struct nvmlUnitInfo_st
    {
        char name[96];            //!< Product name
        char id[96];              //!< Product identifier
        char serial[96];          //!< Product serial number
        char firmwareVersion[96]; //!< Firmware version
    } nvmlUnitInfo_t;
    /** 
 * Power usage information for an S-class unit.
 * The power supply state is a human readable string that equals "Normal" or contains
 * a combination of "Abnormal" plus one or more of the following:
 *    
 *    - High voltage
 *    - Fan failure
 *    - Heatsink temperature
 *    - Current limit
 *    - Voltage below UV alarm threshold
 *    - Low-voltage
 *    - SI2C remote off command
 *    - MOD_DISABLE input
 *    - Short pin transition 
*/
    typedef struct nvmlPSUInfo_st
    {
        char state[256];      //!< The power supply state
        unsigned int current; //!< PSU current (A)
        unsigned int voltage; //!< PSU voltage (V)
        unsigned int power;   //!< PSU power draw (W)
    } nvmlPSUInfo_t;
    /** 
 * Fan speed reading for a single fan in an S-class unit.
 */
    typedef struct nvmlUnitFanInfo_st
    {
        unsigned int speed;   //!< Fan speed (RPM)
        nvmlFanState_t state; //!< Flag that indicates whether fan is working properly
    } nvmlUnitFanInfo_t;
    /** 
 * Fan speed readings for an entire S-class unit.
 */
    typedef struct nvmlUnitFanSpeeds_st
    {
        nvmlUnitFanInfo_t fans[24]; //!< Fan speed data for each fan
        unsigned int count;         //!< Number of fans in unit
    } nvmlUnitFanSpeeds_t;
    /** @} */

    /***************************************************************************************************/
    /** @addtogroup nvmlEvents 
 *  @{
 */
    /***************************************************************************************************/

    /** 
 * Handle to an event set
 */
    typedef struct nvmlEventSet_st *nvmlEventSet_t;
    /** @} */

    /** 
 * Information about occurred event
 */
    typedef struct nvmlEventData_st
    {
        nvmlDevice_t device;            //!< Specific device where the event occurred
        unsigned long long eventType;   //!< Information about what specific event occurred
        unsigned long long eventData;   //!< Stores XID error for the device in the event of nvmlEventTypeXidCriticalError,
                                        //   eventData is 0 for any other event. eventData is set as 999 for unknown xid error.
        unsigned int gpuInstanceId;     //!< If MIG is enabled and nvmlEventTypeXidCriticalError event is attributable to a GPU
                                        //   instance, stores a valid GPU instance ID. gpuInstanceId is set to 0xFFFFFFFF
                                        //   otherwise.
        unsigned int computeInstanceId; //!< If MIG is enabled and nvmlEventTypeXidCriticalError event is attributable to a
                                        //   compute instance, stores a valid compute instance ID. computeInstanceId is set to
                                        //   0xFFFFFFFF otherwise.
    } nvmlEventData_t;
    /** @} */

    /***************************************************************************************************/
    /** @defgroup nvmlAccountingStats Accounting Statistics
 *  @{
 *
 *  Set of APIs designed to provide per process information about usage of GPU.
 *
 *  @note All accounting statistics and accounting mode live in nvidia driver and reset 
 *        to default (Disabled) when driver unloads.
 *        It is advised to run with persistence mode enabled.
 *
 *  @note Enabling accounting mode has no negative impact on the GPU performance.
 */
    /***************************************************************************************************/

    /**
 * Describes accounting statistics of a process.
 */
    typedef struct nvmlAccountingStats_st
    {
        unsigned int gpuUtilization; //!< Percent of time over the process's lifetime during which one or more kernels was executing on the GPU.
                                     //! Utilization stats just like returned by \ref nvmlDeviceGetUtilizationRates but for the life time of a
                                     //! process (not just the last sample period).
                                     //! Set to NVML_VALUE_NOT_AVAILABLE if nvmlDeviceGetUtilizationRates is not supported

        unsigned int memoryUtilization; //!< Percent of time over the process's lifetime during which global (device) memory was being read or written.
                                        //! Set to NVML_VALUE_NOT_AVAILABLE if nvmlDeviceGetUtilizationRates is not supported

        unsigned long long maxMemoryUsage; //!< Maximum total memory in bytes that was ever allocated by the process.
                                           //! Set to NVML_VALUE_NOT_AVAILABLE if nvmlProcessInfo_t->usedGpuMemory is not supported

        unsigned long long time; //!< Amount of time in ms during which the compute context was active. The time is reported as 0 if
                                 //!< the process is not terminated

        unsigned long long startTime; //!< CPU Timestamp in usec representing start time for the process

        unsigned int isRunning; //!< Flag to represent if the process is running (1 for running, 0 for terminated)

        unsigned int reserved[5]; //!< Reserved for future use
    } nvmlAccountingStats_t;