nvml-wrapper-sys/src/bindings/linux.rs

pub type nvmlHwbcEntry_t = nvmlHwbcEntry_st;
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum nvmlFanState_enum { NVML_FAN_NORMAL = 0, NVML_FAN_FAILED = 1, }
pub use self::nvmlFanState_enum as nvmlFanState_t;
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum nvmlLedColor_enum {
    NVML_LED_COLOR_GREEN = 0,
    NVML_LED_COLOR_AMBER = 1,
}
pub use self::nvmlLedColor_enum as nvmlLedColor_t;
#[repr(C)]
pub struct nvmlLedState_st {
    pub cause: [::std::os::raw::c_char; 256usize],
    pub color: nvmlLedColor_t,
}
#[test]
fn bindgen_test_layout_nvmlLedState_st() {
    assert_eq!(::std::mem::size_of::<nvmlLedState_st>() , 260usize , concat !
               ( "Size of: " , stringify ! ( nvmlLedState_st ) ));
    assert_eq! (::std::mem::align_of::<nvmlLedState_st>() , 4usize , concat !
                ( "Alignment of " , stringify ! ( nvmlLedState_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlLedState_st ) ) . cause as * const _
                as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlLedState_st ) ,
                "::" , stringify ! ( cause ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlLedState_st ) ) . color as * const _
                as usize } , 256usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlLedState_st ) ,
                "::" , stringify ! ( color ) ));
}
impl Default for nvmlLedState_st {
    fn default() -> Self { unsafe { ::std::mem::zeroed() } }
}
pub type nvmlLedState_t = nvmlLedState_st;
#[repr(C)]
pub struct nvmlUnitInfo_st {
    pub name: [::std::os::raw::c_char; 96usize],
    pub id: [::std::os::raw::c_char; 96usize],
    pub serial: [::std::os::raw::c_char; 96usize],
    pub firmwareVersion: [::std::os::raw::c_char; 96usize],
}
#[test]
fn bindgen_test_layout_nvmlUnitInfo_st() {
    assert_eq!(::std::mem::size_of::<nvmlUnitInfo_st>() , 384usize , concat !
               ( "Size of: " , stringify ! ( nvmlUnitInfo_st ) ));
    assert_eq! (::std::mem::align_of::<nvmlUnitInfo_st>() , 1usize , concat !
                ( "Alignment of " , stringify ! ( nvmlUnitInfo_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlUnitInfo_st ) ) . name as * const _
                as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlUnitInfo_st ) ,
                "::" , stringify ! ( name ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlUnitInfo_st ) ) . id as * const _ as
                usize } , 96usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlUnitInfo_st ) ,
                "::" , stringify ! ( id ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlUnitInfo_st ) ) . serial as * const _
                as usize } , 192usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlUnitInfo_st ) ,
                "::" , stringify ! ( serial ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlUnitInfo_st ) ) . firmwareVersion as
                * const _ as usize } , 288usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlUnitInfo_st ) ,
                "::" , stringify ! ( firmwareVersion ) ));
}
impl Default for nvmlUnitInfo_st {
    fn default() -> Self { unsafe { ::std::mem::zeroed() } }
}
pub type nvmlUnitInfo_t = nvmlUnitInfo_st;
#[repr(C)]
pub struct nvmlPSUInfo_st {
    pub state: [::std::os::raw::c_char; 256usize],
    pub current: ::std::os::raw::c_uint,
    pub voltage: ::std::os::raw::c_uint,
    pub power: ::std::os::raw::c_uint,
}
#[test]
fn bindgen_test_layout_nvmlPSUInfo_st() {
    assert_eq!(::std::mem::size_of::<nvmlPSUInfo_st>() , 268usize , concat ! (
               "Size of: " , stringify ! ( nvmlPSUInfo_st ) ));
    assert_eq! (::std::mem::align_of::<nvmlPSUInfo_st>() , 4usize , concat ! (
                "Alignment of " , stringify ! ( nvmlPSUInfo_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlPSUInfo_st ) ) . state as * const _
                as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlPSUInfo_st ) , "::"
                , stringify ! ( state ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlPSUInfo_st ) ) . current as * const _
                as usize } , 256usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlPSUInfo_st ) , "::"
                , stringify ! ( current ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlPSUInfo_st ) ) . voltage as * const _
                as usize } , 260usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlPSUInfo_st ) , "::"
                , stringify ! ( voltage ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlPSUInfo_st ) ) . power as * const _
                as usize } , 264usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlPSUInfo_st ) , "::"
                , stringify ! ( power ) ));
}
impl Default for nvmlPSUInfo_st {
    fn default() -> Self { unsafe { ::std::mem::zeroed() } }
}
pub type nvmlPSUInfo_t = nvmlPSUInfo_st;
#[repr(C)]
#[derive(Debug, Copy)]
pub struct nvmlUnitFanInfo_st {
    pub speed: ::std::os::raw::c_uint,
    pub state: nvmlFanState_t,
}
#[test]
fn bindgen_test_layout_nvmlUnitFanInfo_st() {
    assert_eq!(::std::mem::size_of::<nvmlUnitFanInfo_st>() , 8usize , concat !
               ( "Size of: " , stringify ! ( nvmlUnitFanInfo_st ) ));
    assert_eq! (::std::mem::align_of::<nvmlUnitFanInfo_st>() , 4usize , concat
                ! ( "Alignment of " , stringify ! ( nvmlUnitFanInfo_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlUnitFanInfo_st ) ) . speed as * const
                _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlUnitFanInfo_st ) ,
                "::" , stringify ! ( speed ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlUnitFanInfo_st ) ) . state as * const
                _ as usize } , 4usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlUnitFanInfo_st ) ,
                "::" , stringify ! ( state ) ));
}
impl Clone for nvmlUnitFanInfo_st {
    fn clone(&self) -> Self { *self }
}
impl Default for nvmlUnitFanInfo_st {
    fn default() -> Self { unsafe { ::std::mem::zeroed() } }
}
pub type nvmlUnitFanInfo_t = nvmlUnitFanInfo_st;
#[repr(C)]
#[derive(Debug, Copy)]
pub struct nvmlUnitFanSpeeds_st {
    pub fans: [nvmlUnitFanInfo_t; 24usize],
    pub count: ::std::os::raw::c_uint,
}
#[test]
fn bindgen_test_layout_nvmlUnitFanSpeeds_st() {
    assert_eq!(::std::mem::size_of::<nvmlUnitFanSpeeds_st>() , 196usize ,
               concat ! ( "Size of: " , stringify ! ( nvmlUnitFanSpeeds_st )
               ));
    assert_eq! (::std::mem::align_of::<nvmlUnitFanSpeeds_st>() , 4usize ,
                concat ! (
                "Alignment of " , stringify ! ( nvmlUnitFanSpeeds_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlUnitFanSpeeds_st ) ) . fans as *
                const _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlUnitFanSpeeds_st )
                , "::" , stringify ! ( fans ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlUnitFanSpeeds_st ) ) . count as *
                const _ as usize } , 192usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlUnitFanSpeeds_st )
                , "::" , stringify ! ( count ) ));
}
impl Clone for nvmlUnitFanSpeeds_st {
    fn clone(&self) -> Self { *self }
}
impl Default for nvmlUnitFanSpeeds_st {
    fn default() -> Self { unsafe { ::std::mem::zeroed() } }
}
pub type nvmlUnitFanSpeeds_t = nvmlUnitFanSpeeds_st;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct nvmlEventSet_st([u8; 0]);
pub type nvmlEventSet_t = *mut nvmlEventSet_st;
#[repr(C)]
#[derive(Debug, Copy)]
pub struct nvmlEventData_st {
    pub device: nvmlDevice_t,
    pub eventType: ::std::os::raw::c_ulonglong,
    pub eventData: ::std::os::raw::c_ulonglong,
}
#[test]
fn bindgen_test_layout_nvmlEventData_st() {
    assert_eq!(::std::mem::size_of::<nvmlEventData_st>() , 24usize , concat !
               ( "Size of: " , stringify ! ( nvmlEventData_st ) ));
    assert_eq! (::std::mem::align_of::<nvmlEventData_st>() , 8usize , concat !
                ( "Alignment of " , stringify ! ( nvmlEventData_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlEventData_st ) ) . device as * const
                _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlEventData_st ) ,
                "::" , stringify ! ( device ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlEventData_st ) ) . eventType as *
                const _ as usize } , 8usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlEventData_st ) ,
                "::" , stringify ! ( eventType ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlEventData_st ) ) . eventData as *
                const _ as usize } , 16usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlEventData_st ) ,
                "::" , stringify ! ( eventData ) ));
}
impl Clone for nvmlEventData_st {
    fn clone(&self) -> Self { *self }
}
impl Default for nvmlEventData_st {
    fn default() -> Self { unsafe { ::std::mem::zeroed() } }
}
pub type nvmlEventData_t = nvmlEventData_st;
#[repr(C)]
#[derive(Debug, Default, Copy)]
pub struct nvmlAccountingStats_st {
    pub gpuUtilization: ::std::os::raw::c_uint,
    pub memoryUtilization: ::std::os::raw::c_uint,
    pub maxMemoryUsage: ::std::os::raw::c_ulonglong,
    pub time: ::std::os::raw::c_ulonglong,
    pub startTime: ::std::os::raw::c_ulonglong,
    pub isRunning: ::std::os::raw::c_uint,
    pub reserved: [::std::os::raw::c_uint; 5usize],
}
